tests/cases/generics/ok/type-alias-no-implicit-std.ari
type Letter = char;

fn main() -> i64 {
  let value: Letter = 'Z';
  return value as i64;
}
