tests/cases/generics/errors/generic-return-context-uninferred.ari
fn make_value[T]() -> T {
  return 1;
}

fn main() -> i64 {
  let value: i64 = make_value();
  return value;
}
